2013-03-11 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
	* Version changed to 0.0.1

2013-02-22 Guillaume Germain <guillaume.germain@plan-net.fr>
	* Fix: Usage of PHP short open tags.

2013-02-22 Guillaume Germain <guillaume.germain@plan-net.fr>
	* Bug Fix: Added empty item in plugin source field to allow form reloading when selecting a valid value 

2012-10-02 Emilie SAGNIEZ  <emilie@in-cite.net>
	* First version stable
	* Initial import

2012-07-31 Plan Net  <technique@in-cite.net>

	* initial code generated with kickstarter