@@ -1,6 +1,6 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2012-10-01 11:00
+// This file was generated on 2013-03-11 16:04
 
 $extensionPath = t3lib_extMgm::extPath('pnf_gallery');
 $extensionClassesPath = $extensionPath . 'Classes/';
@@ -8,6 +8,8 @@ return array(
 	'tx_pnfgallery_dam' => $extensionClassesPath . 'class.tx_pnfgallery_dam.php',
 	'tx_pnfgallery_dynflex' => $extensionClassesPath . 'class.tx_pnfgallery_dynflex.php',
 	'tx_pnfgallery_flex_itemsprocfunc' => $extensionClassesPath . 'class.tx_pnfgallery_flex_itemsProcFunc.php',
+	'tx_pnfgallery_masonry' => $extensionPath . 'themes/masonry/class.tx_pnfgallery_masonry.php',
+	'tx_pnfgallery_mobilegallery' => $extensionPath . 'themes/mobilegallery/class.tx_pnfgallery_mobilegallery.php',
 	'tx_pnfgallery_pi1' => $extensionPath . 'pi1/class.tx_pnfgallery_pi1.php',
 	'tx_pnfgallery_pi1_wizicon' => $extensionPath . 'pi1/class.tx_pnfgallery_pi1_wizicon.php',
 	'tx_pnfgallery_simplegallery' => $extensionPath . 'themes/simplegallery/class.tx_pnfgallery_simplegallery.php',
@@ -16,6 +18,5 @@ return array(
 	'tx_pnfgallery_theme' => $extensionClassesPath . 'interface.tx_pnfgallery_theme.php',
 	'tx_pnfgallery_themes_manager' => $extensionClassesPath . 'class.tx_pnfgallery_themes_manager.php',
 	'tx_pnfgallery_widget' => $extensionPath . 'themes/widget/class.tx_pnfgallery_widget.php',
-	'tx_pnfgallery_mobilegallery' => $extensionPath . 'themes/mobilegallery/class.tx_pnfgallery_mobilegallery.php',
 );
 ?>
