@@ -7,6 +7,15 @@
 	<data type="array">
 		<languageKey index="default" type="array">
 			<label index="name">DAM</label>
+			<label index="mode.dam.directory">Répertoire d'images</label>
+			<label index="mode.dam.records">Choix d'images (DAM)</label>
+			<label index="dam_directory">Répertoire</label>
+			<label index="dam_subdirectories">Inclure les sous-dossiers</label>
+			<label index="dam_records">Images</label>
+			<label index="dam_orderby">Trier par</label>
+			<label index="dam_orderby.uid">Uid</label>
+			<label index="dam_orderby.crdate">Date de création</label>
+			<label index="dam_orderby.rand">Aléatoire</label>
 		</languageKey>
 	</data>
 </T3locallang>
